WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310263
[Site Isolation] 6x Security and DOM tests are failing
https://bugs.webkit.org/show_bug.cgi?id=310263
Summary
[Site Isolation] 6x Security and DOM tests are failing
rupin
Reported
2026-03-19 01:11:40 PDT
[Site Isolation] 6x Security and DOM tests are failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-19 01:11:46 PDT
<
rdar://problem/172900405
>
rupin
Comment 2
2026-03-19 01:22:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60922
EWS
Comment 3
2026-03-19 20:31:22 PDT
Committed
309592@main
(1ab4004d124f): <
https://commits.webkit.org/309592@main
> Reviewed commits have been landed. Closing PR #60922 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug